Refactor test data handling and improve reporting
Updated test methods to use string parameters for price and success values, improving compatibility with Excel data. Enhanced screenshot attachment and error handling in TestListener. Changed Maven compiler version to 17 and configured Surefire to use testng.xml. Refactored test names for clarity and improved Excel cell parsing. Updated test data and report output to reflect these changes.